# maestro

./: .gitignore  .release_names.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  build.py  build_backend.py  pyproject.toml  start_mcp.sh
.github/workflows/: maestro_build_upload_images.yaml  maestro_container_agent-test.yaml  maestro_create_tool-test.yaml  maestro_mcp_tool_test.yaml  maestro_release.yaml  maestro_run-tests.yaml
demos/: CONTRIBUTING.md
deployments/: Dockerfile
docs/: PRESENTATION.md  README_openai.md  README_scoring_agent.md  USER_GUIDE.md  WATSONX_EVALUATION_README.md  code_agent_dependencies.md  presentation_script.md
k8s/api/v1alpha1/: remotemcpserver_types.go
k8s/example/yamls/: test_remotemcpserver.yaml
mcp/examples/slack/: README.md  agents.yaml  tools.yaml  workflow.yaml
mcp/mcptools/: slack_mcp.py
operator/: Dockerfile-engine  Makefile
operator/api/v1alpha1/: workflowrun_types.go  (+1 more)
src/maestro/: __init__.py  deploy.py  file_logger.py  logging_hooks.py  mcptool.py  mermaid.py  step.py  tool_utils.py  utils.py  workflow.py
tests/: test_maestro_mcp.py  test_tool_utils.py
tests/agents/: test_code_agent_dependencies.py  test_query_agent.py  test_scoring_agent.py  test_token_tracking.py  test_utils.py
tests/cli/: test_commands.py
tests/examples/: code_agent_with_dependencies.yaml  code_agent_with_dependencies_requirements.yaml
tests/integration/: test_evaluation_mock.py
tests/utils/: responses.yml
tests/workflow/: test_exception.py  test_mermaid.py
tools/: README.md  buildimg.sh  check-mermaid.sh  package-lock.json  package.json  validate-mermaid.js
web/maestro-ui/: Dockerfile  README.md
(+78 files in other folders)
